--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,4 @@
-#!/bin/bash
-
+# shellcheck shell=sh
 # Automatically sets up your devbox environment whenever you cd into this
 # directory via our direnv integration:
 
