--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>nalabelle/renovate-config"
+    "github>nalabelle/dotfiles//git/renovate/default.json5"
   ]
 }
